manifests/librespeed/librespeed.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: librespeed
  labels:
    app.kubernetes.io/name: librespeed
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: librespeed
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: librespeed
  labels:
    app.kubernetes.io/name: librespeed
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: librespeed
  template:
    metadata:
      labels:
        app.kubernetes.io/name: librespeed
    spec:
      serviceAccountName: default
      securityContext:
        {}
      containers:
        - name: librespeed
          securityContext:
            {}
          image: "adolfintel/speedtest:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librespeed
  labels:
    app.kubernetes.io/name: librespeed
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: librespeed
            port:
              number: 80
